fix Run Query button on mobile

--- a/style.styl
+++ b/style.styl
@@ -143,6 +143,7 @@ td
 
 #summary
   font-size 120%
+  z-index -1
 
 #summaryMobile
   display none
